--- a/.gitignore
+++ b/.gitignore
@@ -1,19 +1,5 @@
-.gitignor
-.idea
+.gitignore
 venv
-__pycahche__
-26_3.db
-app.js
-dop.py
-git.txt
-index.html
-less5.py
-lesson2.py
-lesson3.py
-lesson4.py
-lesson6.py
-main.py
-r.py
-tt.py
-
-
+.idea
+.vs
+__pycache__/
